<resources>
    <string name="app_name">My Goal</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="info">Помогает планировать повседневные дела, следить за выполнением целей</string>
    <string name="vers">Версия %1$s (%2$s)</string>
    <string name="m1">Goals</string>
    <string name="m2">Calendar</string>
    <string name="m3">Statistic</string>
    <string name="m4">Delete All</string>
    <string name="m5">About</string>
    <string name="m6">Add Goal</string>
    <string name="m7">Edit Goal</string>
    <string name="m8">Settings</string>
    <string name="current">CURRENT</string>
    <string name="done">DONE</string>
    <string name="missing">MISSING</string>
    <string name="all">ALL</string>
    <string name="total">TOTAL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Week">WEEK</string>
    <string name="Month">MONTH</string>
    <string name="Year">YEAR</string>
    <string name="goal_name">Name</string>
    <string name="detail">Detail</string>
    <string name="date">Date</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="completed">COMPLETED</string>
    <string name="completed2">Completed</string>
    <string name="successful">Successful</string>
    <string name="error">Error! Try Again</string>
    <string name="nogoals">No Goals</string>
    <string name="coml">Goals Completed!</string>
    <string name="uncompleted">UNCOMPLETED</string>
    <string name="def">Default</string>
    <string name="namesort">By name</string>
    <string name="datesort">By date</string>
    <string name="sort">Sort:</string>
    <string name="notification">Notifiation:</string>
    <string name="apply">Apply changes</string>
    <string name="ticker">Notification</string>
    <string name="notif">For today there is a goal</string>
    <string name="progress">PROGRESS</string>
    <string name="yet">Already completed</string>



</resources>
