<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_goals"
        android:orderInCategory="1"
        android:title="@string/m1"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_calendar"
        android:orderInCategory="2"
        android:title="@string/m2"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_static"
        android:orderInCategory="3"
        android:title="@string/m3"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="4"
        android:title="@string/m8"
        app:showAsAction="never" />

</menu>