<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                 style="@style/edit_text_add"
                 android:id="@+id/edit_goal"
                 android:hint="@string/goal_name"
                 android:inputType="textMultiLine"
                 android:layout_marginLeft="@dimen/indent"
                 android:layout_marginRight="@dimen/indent">
            </EditText>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/edit_text_add"
                android:id="@+id/edit_detail"
                android:hint="@string/detail"
                android:inputType="textMultiLine"
                android:layout_marginLeft="@dimen/indent"
                android:layout_marginRight="@dimen/indent">>
            </EditText>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:clickable="true"
        android:onClick="onclick">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                style="@style/edit_text_add"
                android:id="@+id/edit_end"
                android:hint="@string/end"
                android:inputType="date"
                android:clickable="true"
                android:focusable="false"
                android:layout_marginLeft="@dimen/indent"
                android:layout_marginRight="@dimen/indent"
                >
            </EditText>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_done_black_24dp"
        app:fabSize="normal"
        android:clickable="true"
        android:layout_marginRight="@dimen/indent"
        android:layout_marginBottom="@dimen/indent"
        app:layout_anchorGravity="bottom|right"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"/>
</LinearLayout>

