<!-- <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"> -->

<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="2dp"
    android:layout_marginLeft="@dimen/indent"
    android:layout_marginRight="@dimen/indent"
    android:layout_marginTop="@dimen/indent_small"
    android:layout_marginBottom="@dimen/indent_small"
    android:background="@color/primary_light"

    >

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/goal_name"
                    android:textSize="30sp"
                    android:layout_marginLeft="@dimen/indent"
                    android:layout_marginRight="@dimen/indent"
                    android:id="@+id/name"
                    />
                <TextView
                    android:id="@+id/name_fr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/primary_dark"
                    android:textSize="30sp"
                    >
                    </TextView>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textSize="30sp"
                android:layout_marginLeft="@dimen/indent"
                android:layout_marginRight="@dimen/indent"
                android:id="@+id/detail"/>
            <TextView
                android:id="@+id/detail_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/primary_dark"
                android:textSize="30sp" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="30sp"
                android:layout_marginLeft="@dimen/indent"
                android:layout_marginRight="@dimen/indent"
                android:id="@+id/date"/>
            <TextView
                android:id="@+id/date_fr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textColor="@color/primary_dark"
                android:textSize="30sp" >
            </TextView>
        </LinearLayout>
    </LinearLayout>
    </android.support.v7.widget.CardView>

  <!--  <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/textView2"/>


</LinearLayout> -->